[gd_scene load_steps=3 format=3 uid="uid://cs01n5570xp6v"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_kr678"]
[ext_resource type="PackedScene" uid="uid://knndccnkckoa" path="res://scenes/menus/settings_menu.tscn" id="2_7tkly"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kr678")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character Testing"

[node name="Button2" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Vehicle Testing"

[node name="Button3" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Vehicle Testing"

[node name="Button4" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Button5" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="SettingsMenu" parent="." instance=ExtResource("2_7tkly")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Button4" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Button5" to="." method="_on_quit_pressed"]
